syntax="proto3";

option go_package="github.com/fdymylja/cosmos-os/pkg/apis/application/v1alpha1";

message DeliverRequest {
  bytes bytes = 1;
}

message DeliverResponse {
}

message CheckRequest {
  bytes bytes = 1;
}

message CheckResponse {

}

message QueryRequest {
  uint64 height = 1;
  bytes bytes = 2;
}

message QueryResponse {
  bytes bytes = 1;
}

service Application {
  rpc Check(CheckRequest) returns (CheckResponse) {};
  rpc Deliver(DeliverRequest) returns (DeliverResponse) {};
  rpc Query(QueryRequest) returns (QueryResponse) {};
}